[NO ISSUE][COMP] Keep constant assigns in subplans
- user model changes: no
- storage format changes: no
- interface changes: no

Details:
- Do not move constant assigns out of subplans
- Fix PushSubplanIntoGroupByRule handling of
  right branches of binary operators

Change-Id: Ic0e892f71d464babdcc45e975b6425ff2555aaa6
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/8823
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>